--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 		      <label for="subject">
 		      <span>Θέμα: </span>
 			      <select id="subject" name="subject" tabindex="4">   
-			         <option value="hello">Τι θα θέλατε να μάθεται;</option>
+			         <option value="hello">Τι θα θέλατε να μάθετε;</option>
 			         <option value="quote">Προσφορές</option>  
 			         <option value="general">Κρουαζιέρα</option>
 			      </select>
