--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/mystyle.css">
@@ -11,8 +11,8 @@
 	</head>
 
 	<body>
+		<div class="fonto">
 
-		<div class="fonto"></div>
 		<ul>
 		  <li><a href="index.html">Αρχική</a></li>
 		  <li><a href="info.html">Πληροφορίες</a></li>
@@ -22,12 +22,11 @@
 		</ul>
 
 		<main>
-			<div class="text text_1">				
-			</div>
-			<div class="text text_2">				 
-			</div>
-			<div class="text text_3">				
-			</div>
+		
+
+			<div class="text text_1">ΘΕΣ</div>
+			<div class="text text_2">ΝΑ ΠΑΣ</div>
+			<div class="text text_3">ΔΙΑΚΟΠΕΣ;</div>
 		</main>
 
 		<footer class="footer">
@@ -38,10 +37,11 @@
 		    <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus"></i></a>
 		  </div>
 		</footer>
+		</div>
 
 	<script type="text/javascript">
 		$(document).ready(function(){
-	        $(".text_1").animate({'top':'120px'},1000, function() {
+	        $(".text_1").animate({'top':'140px'},1000, function() {
 	        	$(".text_2").animate({'margin-left':'-60px'},1000, function() { 
 	        		$(".text_3").animate({'opacity':'1'},1500, function() {
 	        		});
