full responsive index
full responisive index

--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 		</ul>
 
 		<main>
-		
-
 			<div class="text text_1">ΘΕΣ</div>
 			<div class="text text_2">ΝΑ ΠΑΣ</div>
 			<div class="text text_3">ΔΙΑΚΟΠΕΣ;</div>
@@ -41,7 +39,7 @@
 
 	<script type="text/javascript">
 		$(document).ready(function(){
-	        $(".text_1").animate({'top':'140px'},1000, function() {
+	        $(".text_1").animate({'margin-top':'290px'},1000, function() {
 	        	$(".text_2").animate({'margin-left':'-60px'},1000, function() { 
 	        		$(".text_3").animate({'opacity':'1'},1500, function() {
 	        		});
