--- a/info.html
+++ b/info.html
@@ -35,9 +35,9 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 	        $("h1").animate({'opacity':'1'},1500, function() {
-	        	$(".prwto").animate({'margin-left':'-350px'},1500, function() {
-	        		$(".deutero").animate({'margin-left':'-350px'},1000, function() {
-	        			$(".trito").animate({'margin-left':'-350px'},1000, function() { 
+	        	$(".prwto").animate({'opacity':'1'},1500, function() {
+	        		$(".deutero").animate({'opacity':'1'},1000, function() {
+	        			$(".trito").animate({'opacity':'1'},1000, function() { 
 	        			});
 	        		});
 	        	});
