--- a/fun.html
+++ b/fun.html
@@ -22,7 +22,8 @@
 		  <li><a href="contact.html">Επικοινωνία</a></li>
 		</ul>
 
-<main class="container overlay">
+<main> 
+	<div class="container overlay">
 
 		<div class="night_1"><img src="img/night_1.jpg" width="1280" height="720"></div>
 
@@ -39,7 +40,7 @@
 		<div class="button_left"><img src="img/button_left.png" /></div>
 
         <div class="button_right"><img src="img/button_right.png" /></div>  	
-
+    </div>
 </main>
 
 	<script>
@@ -103,6 +104,78 @@
 	        });
 	    });
 	});
+</script>
+
+<script>
+	$(document).ready(function(){
+		$(window).resize(function(){
+			if ($(window).width() < 1400){	
+
+	var slideria_nums = ["night_1", "night_2", "night_3", "night_4", "night_5", "night_6"];
+	var slideria_temp = "";
+    var slideria_i;
+
+    //left
+    $('.button_left').on("click", function () {
+        slideria_left();
+    });
+
+    //right
+    $('.button_right').on("click", function () {
+        slideria_right();
+    });
+
+	function slideria_left() {
+
+    slideria_temp = slideria_nums[0];
+    for (slideria_i = 1; slideria_i < slideria_nums.length; slideria_i++) {
+        slideria_nums[slideria_i - 1] = slideria_nums[slideria_i];
+    }
+
+    slideria_nums[slideria_nums.length - 1] = slideria_temp;
+
+    $('.' + slideria_nums[0] + '').animate({ 'opacity': 0.6, 'margin-left': '-350px', 'z-index': '1', 'height': '460', 'margin-top': '-230px'}, 700);
+
+    $('.' + slideria_nums[1] + '').animate({ 'opacity': 0.8, 'margin-left': '-410px', 'z-index': '3', 'height': '480', 'margin-top': '-240px'}, 700);
+
+    $('.' + slideria_nums[2] + '').animate({ 'opacity': 1, 'margin-left': '-470px', 'z-index': '6', 'height': '500', 'margin-top': '-250px' }, 700);
+
+    $('.' + slideria_nums[3] + '').animate({ 'opacity': 0.8, 'margin-left': '-530px', 'z-index': '3', 'height': '480', 'margin-top': '-360px'}, 700);
+
+    $('.' + slideria_nums[4] + '').animate({ 'opacity': 0.6, 'margin-left': '-590px', 'z-index': '1', 'height': '460', 'margin-top': '-240px'}, 700);
+
+    $('.' + slideria_nums[5] + '').animate({ 'opacity': 0, 'margin-left': '-640px', 'z-index': '1', 'height': '500', 'margin-top': '-230px'}, 700);
+
+
+	}
+
+	function slideria_right() {
+
+
+
+    slideria_temp = slideria_nums[slideria_nums.length - 1];
+    for (slideria_i = slideria_nums.length - 1; slideria_i > 0; slideria_i--) {
+        slideria_nums[slideria_i] = slideria_nums[slideria_i - 1];
+    }
+    slideria_nums[0] = slideria_temp;
+
+    $('.' + slideria_nums[0] + '').animate({ 'opacity': 0.6, 'margin-left': '-350px', 'z-index': '1', 'height': '460', 'margin-top': '-230px'}, 700);
+
+    $('.' + slideria_nums[1] + '').animate({ 'opacity': 0.8, 'margin-left': '-410px', 'z-index': '3', 'height': '480', 'margin-top': '-240px'}, 700);
+
+    $('.' + slideria_nums[2] + '').animate({ 'opacity': 1, 'margin-left': '-470px', 'z-index': '6', 'height': '500', 'margin-top': '-250px' }, 700);
+
+    $('.' + slideria_nums[3] + '').animate({ 'opacity': 0.8, 'margin-left': '-530px', 'z-index': '3', 'height': '480', 'margin-top': '-360px'}, 700);
+
+    $('.' + slideria_nums[4] + '').animate({ 'opacity': 0.6, 'margin-left': '-590px', 'z-index': '1', 'height': '460', 'margin-top': '-240px'}, 700);
+
+    $('.' + slideria_nums[5] + '').animate({ 'opacity': 0, 'margin-left': '-640px', 'z-index': '1', 'height': '500', 'margin-top': '-230px'}, 700);
+
+	}
+
+		}	
+	});
+});
 	</script>
 </body>
 </html>
